--- a/maerskAssignment.html
+++ b/maerskAssignment.html
@@ -50,7 +50,7 @@
             height: 22vw;
             justify-content: center;
             align-items: center;
-            color: #fff;
+            color: #FFFFFF;
             font-size: 10vw;
             max-height: 250px;
         }
@@ -68,8 +68,8 @@
             border-radius: 5px;
             padding: 12px;
             font-size: 10px;
-            color: #fff;
-            margin: 10px 0px;
+            color: #FFFFFF;
+            margin: 5px 0px;
             border-bottom: 5px solid #3084a0;
         }
 
@@ -84,18 +84,18 @@
         }
 
         #div2 {
-            background-color: #333333;
-            border-left: #333333 10px solid;
+            background-color: #2F454E;
+            border-left: #2F454E 10px solid;
         }
 
         #div3 {
-            background-color: #939ca6;
-            border-left: #939ca6 10px solid;
+            background-color: #2B8EAD;
+            border-left: #2B8EAD 10px solid;
         }
 
         #div4 {
-            background-color: #6F98A8;
-            border-left: #6F98A8 10px solid;
+            background-color: #2F454E;
+            border-left: #2F454E 10px solid;
         }
 
         #div5 {
@@ -104,18 +104,18 @@
         }
 
         #div6 {
-            background-color: #EFEFEF;
-            border-left: #EFEFEF 10px solid;
+            background-color: #BFBFBF;
+            border-left: #BFBFBF 10px solid;
         }
 
         #div7 {
-            background-color: #2F454E;
-            border-left: #2F454E 10px solid;
+            background-color: #6F98A8;
+            border-left: #6F98A8 10px solid;
         }
 
         #div8 {
-            background-color: #72C3DC;
-            border-left: #72C3DC 10px solid;
+            background-color: #2F454E;
+            border-left: #2F454E 10px solid;
         }
 
         @media only screen and (max-width: 375px) {
@@ -126,15 +126,14 @@
             #tiles div {
                 min-width: 100%;
                 height: 40px;
-                margin: 3px;
+                margin: 2px 0px;
                 background-color: #e0e0e0;
-                color: #000;
+                color: #000000;
                 font-size: 1em;
             }
 
             .col-3 .aside {
                 display: block;
-                margin-top: 10px;
             }
 
             .button {
@@ -143,7 +142,7 @@
 
             .header {
                 background-color: #333333;
-                color: #fff;
+                color: #FFFFFF;
                 text-align: center;
                 margin: -8px
             }
