Updating button colours

--- a/maerskAssignment.html
+++ b/maerskAssignment.html
@@ -63,14 +63,14 @@
         }
 
         .button {
-            background-color: #42b0d5;
+            background-color: #72C3DC;
             border: transparent;
             border-radius: 10px;
             padding: 16px;
             font-size: 14px;
             color: #FFFFFF;
             margin: 5px 0px;
-            border-bottom: 5px solid #3084a0;
+            border-bottom: 5px solid #2B8EAD;
         }
 
         #div0 {
@@ -191,7 +191,7 @@
             }
             for (let loopCounter = 0; loopCounter < arr.length; loopCounter++) {
                 let divID = "div" + loopCounter;
-                document.getElementById(divID).style.order = arr[loopCounter].toString();
+                document.getElementById(divID).style.order = arr[loopCounter];
             }
         }
     </script>
