--- a/maerskAssignment.html
+++ b/maerskAssignment.html
@@ -20,7 +20,7 @@
         html {
             /* Using this font since none was specified in particular */
             font-family: sans-serif;
-            background-color: #f3f3f3;
+            background-color: #EFEFEF;
         }
 
         .header {
@@ -119,6 +119,10 @@
         }
 
         @media only screen and (max-width: 375px) {
+            html {
+                background-color: #ffffff;
+            }
+
             [class*="col-"] {
                 width: 100%;
             }
@@ -127,7 +131,7 @@
                 min-width: 100%;
                 height: 40px;
                 margin: 2px 0px;
-                background-color: #e0e0e0;
+                background-color: #EFEFEF;
                 color: #000000;
                 font-size: 1em;
             }
